2022-02-28 Luigi Scarso <luigi.scarso@gmail.com>
    * pass node to latelua function call (H.Hagen)

2022-02-27 Luigi Scarso <luigi.scarso@gmail.com>
    * Development id also with --version.

2022-02-26 Luigi Scarso <luigi.scarso@gmail.com>
    * write xformattributes and xformresources  (thanks to E. Renkema)

2022-02-25 Luigi Scarso <luigi.scarso@gmail.com>
    * lower max to 10000 and reverse check to max check exception penalty (H.Hagen)

2022-02-05 Luigi Scarso <luigi.scarso@gmail.com>
    *  intercept prefix for toksapp cum suis (H.Hagen)

2022-01-23 Luigi Scarso <luigi.scarso@gmail.com>
    * fixing a 15 year old buglet (math atom glue leak).  
    * New primitive \matheqdirmode for short skip detection in  r2l typesetting (H. Hagen)

2022-01-21 Luigi Scarso <luigi.scarso@gmail.com>
    * patch for the logging of \scantextokens (H. Hagen)

2022-01-17 Siep Kroonenberg <siepo@bitmuis.nl>
   * patch for inconsistent definitions inet_ntop/inet_pton

2022-01-12 Luigi Scarso <luigi.scarso@gmail.com>
   * fixed \showstream (M.Krüger)

2021-12-31 Luigi Scarso <luigi.scarso@gmail.com>
    * drop (for the moment) \showstream

2021-12-30 Luigi Scarso <luigi.scarso@gmail.com>
    * struct dest (M.Krüger)
    * fixed  a 'Conditional jump or move depends on uninitialised value(s)' msg from valgrind

2021-12-29 Luigi Scarso <luigi.scarso@gmail.com>
    * Correctly print \write for the error message 
      "Forbidden control sequence found while scanning text of"
      (thanks to Hironobu Yamashita)

2021-12-27 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed a typo in a tex comment.

2021-12-24 Luigi Scarso <luigi.scarso@gmail.com>
    * Metapost: make sure that an already open VF is closed before to read a new one

2021-12-21 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed os.uname on 64 bit Windows (A. Kakuto, L. Scarso)

2021-12-13 Luigi Scarso <luigi.scarso@gmail.com>